@@ -5,7 +5,7 @@
         Height="350"
         Width="525">
     <DockPanel>
-        <Button Content="Show" Click="AddClick" />
+        <ListBox ItemsSource="{Binding Items}" />
         
     </DockPanel>
 </Window>
