@@ -1,0 +1,18 @@
+namespace DW.WPFToolkit.Helpers
+{
+    /// <summary>
+    /// Defines the state of a key.
+    /// </summary>
+    public enum KeyState
+    {
+        /// <summary>
+        /// The key is in the pressed state.
+        /// </summary>
+        Pressed,
+
+        /// <summary>
+        /// The key is in the released state.
+        /// </summary>
+        Released
+    }
+}
