@@ -3,7 +3,7 @@ using System.Runtime.InteropServices;
 using System.Windows;
 using System.Windows.Interop;
 
-namespace DW.WPFToolkit.Internal
+namespace DW.WPFToolkit.Interactivity
 {
     internal static class WindowTitleBar
     {
