@@ -1,8 +1,5 @@
 ﻿using System;
-using System.Runtime.InteropServices;
 using System.Windows;
-using System.Windows.Interop;
-using DW.WPFToolkit.Internal;
 
 namespace DW.WPFToolkit.Interactivity
 {
